[gd_scene load_steps=18 format=3 uid="uid://dgay74lfvj03a"]

[ext_resource type="Texture2D" uid="uid://df0qpnvfn3l5k" path="res://assets/warped city files/Warped-city-addon-files/Spritesheets/bootleg-walk.png" id="1_7ebll"]
[ext_resource type="Script" path="res://scripts/robot_enemy.gd" id="1_pi8ix"]
[ext_resource type="Texture2D" uid="uid://ct4p4pq28ru1i" path="res://assets/warped city files/SPRITES/misc/enemy-explosion/enemy-explosion-1.png" id="2_isfre"]
[ext_resource type="Texture2D" uid="uid://dubws005dcekv" path="res://assets/warped city files/SPRITES/misc/enemy-explosion/enemy-explosion-2.png" id="3_mj8ei"]
[ext_resource type="Texture2D" uid="uid://c32ntyqmdmb4x" path="res://assets/warped city files/SPRITES/misc/enemy-explosion/enemy-explosion-3.png" id="4_1u88y"]
[ext_resource type="Texture2D" uid="uid://j7uw2deqi81v" path="res://assets/warped city files/SPRITES/misc/enemy-explosion/enemy-explosion-4.png" id="5_5grw8"]
[ext_resource type="Texture2D" uid="uid://cumkex1rdpaq7" path="res://assets/warped city files/SPRITES/misc/enemy-explosion/enemy-explosion-5.png" id="6_ys8y5"]
[ext_resource type="Texture2D" uid="uid://4bor3gol3skj" path="res://assets/warped city files/SPRITES/misc/enemy-explosion/enemy-explosion-6.png" id="7_cgddf"]
[ext_resource type="PackedScene" uid="uid://djfcb0gpaeask" path="res://scenes/UI/EnemeyHB.tscn" id="9_oxkib"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gdw06"]
size = Vector2(39.5, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw4uv"]
atlas = ExtResource("1_7ebll")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxfef"]
atlas = ExtResource("1_7ebll")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcic1"]
atlas = ExtResource("1_7ebll")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_72ptq"]
atlas = ExtResource("1_7ebll")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dtmr"]
atlas = ExtResource("1_7ebll")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g3ip"]
atlas = ExtResource("1_7ebll")
region = Rect2(400, 0, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_aa68n"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": ExtResource("2_isfre")
}, {
"duration": 0.5,
"texture": ExtResource("3_mj8ei")
}, {
"duration": 0.5,
"texture": ExtResource("4_1u88y")
}, {
"duration": 0.5,
"texture": ExtResource("5_5grw8")
}, {
"duration": 0.5,
"texture": ExtResource("6_ys8y5")
}, {
"duration": 0.5,
"texture": ExtResource("7_cgddf")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw4uv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxfef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcic1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72ptq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dtmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g3ip")
}],
"loop": true,
"name": &"patrolWalk",
"speed": 5.0
}]

[node name="robotEnemy" type="CharacterBody2D"]
script = ExtResource("1_pi8ix")

[node name="robotCollision" type="CollisionShape2D" parent="."]
position = Vector2(-0.75, 6)
shape = SubResource("RectangleShape2D_gdw06")

[node name="robotAnimSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_aa68n")
animation = &"patrolWalk"

[node name="robotRay" type="RayCast2D" parent="."]
position = Vector2(22, 2)

[node name="EnemyHealthBar" parent="." instance=ExtResource("9_oxkib")]
